--- a/main.css
+++ b/main.css
@@ -18,10 +18,13 @@ body{
     100%{background-position:0% 72%}
 }
 header{
-    text-align: center
+    text-align: center;
 }
 #logga{
-    width: 300px;
+    position: fixed;
+    left: 50%;
+    width: 120px;
+    margin-left: -60px;
 }
 #meny{
     display: none;
@@ -34,10 +37,10 @@ header{
 }
 #openmeny, #closemeny{
     position: fixed;
-    margin-left: -50px;
-    width: 100px;
-    left: 50%;
-    top: 60%;
+    margin-left: 0px;
+    height: 8%;
+    left: 2%;
+    top: 90%;
     animation: snurr 5s infinite linear;
 }
 @keyframes snurr{
@@ -54,8 +57,70 @@ header{
 .menylink:hover{
     color: #FF6600;
 }
+.frontlinks{
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    top: 35%;
+    width: 40%;
+    height: 200px;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    font-size: 30px;
+    transition: 0.5s;
+}
+.frontlinks:hover{
+    box-shadow: 0px 0px 5px 5px #333;
+}
+.frontlinks p{
+    color: #f60;
+    background: rgba(0,0,0,0.6);
+    height: 40px;
+    margin-top: 50%;
+}
+#frontlink1{
+    background-image: url(bilder/typing.jpg);
+    left: 5%;
+}
+#frontlink2{
+    background-image: url(bilder/contact.png);
+    left: 55%;
+}
+#omoss{
+    width: 60%;
+    top: 60%;
+    height: 20%;
+    left: 50%;
+    margin-left: -30%;
+    background-image: url(bilder/omoss.png);
+}
 #wrapper{
     height: 20%;
+}
+
+/* JOBBSIDAN */
+
+#workdiv{
+    padding: 150px 0px;
+}
+#workdiv div{
+    padding: 20px 70px;
+}
+#workdiv div a{
+    color: #fff;
+    display: block;
+    margin: 20px;
+    text-decoration: none;
+    text-align: center;
+    padding: 20px;
+    border-style: solid;
+    font-size: 20px;
+}
+#workdiv div a:hover{
+    background-color: #fff;
+    color: #000;
+    border-color: #fff;
 }
 footer{
     color: #f60;
