--- a/main.css
+++ b/main.css
@@ -1,21 +1,31 @@
 html, body{
     height: 100%;
     margin: 0px;
-    
     font-family: 'Open Sans', sans-serif;
 }
 html{
-    animation: gradient_back 10s ease infinite;
+    /*animation: gradient_back 10s ease infinite;
     background: linear-gradient(122deg, #444, #222, #000, #222, #444);
-    background-size: 700% 100%;
+    background-size: 700% 100%;*/
 }
 body{
-    background: rgba(200,200,200,0.2);
+    background: rgba(0,0,0,0.8);
+    z-index: 5;
 }
 @keyframes gradient_back { 
     0%{background-position:0% 72%}
     50%{background-position:100% 29%}
     100%{background-position:0% 72%}
+}
+#background{
+    height: 100%;
+    position: fixed;
+    z-index: 0;
+    text-align: center;
+}
+#backvideo{
+    height: 100%;
+    margin: auto;
 }
 header{
     text-align: center;
@@ -34,6 +44,7 @@ header{
     width: 100%;
     left: 0%;
     top: 0%;
+    z-index: 10;
 }
 #openmeny, #closemeny{
     position: fixed;
@@ -42,6 +53,7 @@ header{
     left: 2%;
     top: 90%;
     animation: snurr 5s infinite linear;
+    z-index: 10;
 }
 @keyframes snurr{
     from{transform: rotate(360deg)}
@@ -97,17 +109,24 @@ header{
 }
 #wrapper{
     height: 20%;
+    z-index: 2;
 }
 
 /* JOBBSIDAN */
 
 #workdiv{
-    padding: 150px 0px;
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    padding: 150px 0px 300px 0px;
+    overflow: scroll;
 }
 #workdiv div{
     padding: 20px 70px;
 }
 #workdiv div a{
+    background: rgba(0,0,0,0.2);
     color: #fff;
     display: block;
     margin: 20px;
@@ -118,10 +137,34 @@ header{
     font-size: 20px;
 }
 #workdiv div a:hover{
-    background-color: #fff;
-    color: #000;
+    background: rgba(255,102,0, 0.7);
+    color: #fff;
     border-color: #fff;
 }
+.offer{
+    color: #fff;
+    text-align: center;
+    font-weight: 200;
+}
+@media screen and(min-width:800px){
+    #workdiv div a{
+        display: inline-block;
+        width: 30%;
+    }
+}
+
+/*---SLUT---*/
+/*---KONTAKT---*/
+#kontaktdiv{
+    padding-top: 40%;
+}
+#kontaktdiv h2{
+    text-align: center;
+    color: #fff;
+    
+}
+
+
 footer{
     color: #f60;
     position: fixed;
